--- a/Front/src/public/index.html
+++ b/Front/src/public/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="google-signin-client_id"
       content="1013873914332-sf1up07lqjoch6tork8cpfohi32st8pi.apps.googleusercontent.com"
